// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Select / SingleSelectList Item Default 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #4B4B46;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c0:hover {
  background: #F5F5F5;
}

.c2 {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

<span
  className="c0 c1"
>
  <span
    className="c2"
  >
    First
  </span>
</span>
`;

exports[`Storyshots Molecules | Input / Select / SingleSelectList Item Disabled 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #4B4B46;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
  color: #A0A09B;
  pointer-events: none;
}

.c0:hover {
  background: #F5F5F5;
}

.c2 {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

<span
  className="c0 c1"
>
  <span
    className="c2"
  >
    First
  </span>
</span>
`;

exports[`Storyshots Molecules | Input / Select / SingleSelectList Item Selected 1`] = `
.c4 {
  padding-left: 8px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #0046FF;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c0:hover {
  background: #F5F5F5;
}

.c2 {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

<span
  className="c0 c1"
>
  <span
    className="c2"
  >
    First
  </span>
  <div
    className="c3"
  >
    <div
      className="c4"
    >
      <svg
        aria-hidden="true"
        className="c5"
        focusable="false"
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        size={4}
        viewBox="0 0 24 24"
      >
        <path
          d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
        />
      </svg>
    </div>
  </div>
</span>
`;

exports[`Storyshots Molecules | Input / Select / SingleSelectList List With Different Arrow Positions 1`] = `
.c12 {
  padding-left: 8px;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  position: relative;
  top: 10px;
  border: 1px solid #bcbcb6;
  background-color: #ffffff;
  padding-top: 8px;
  padding-bottom: 8px;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  max-height: 240px;
}

.c4:before {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: -6px;
  border-bottom: 6px solid;
  border-bottom-color: #bcbcb6;
}

.c4:after {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: -5px;
  border-bottom: 6px solid;
  border-bottom-color: #ffffff;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  position: relative;
  top: 10px;
  border: 1px solid #bcbcb6;
  background-color: #ffffff;
  padding-top: 8px;
  padding-bottom: 8px;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  max-height: 240px;
}

.c15:before {
  left: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: -6px;
  border-bottom: 6px solid;
  border-bottom-color: #bcbcb6;
}

.c15:after {
  left: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: -5px;
  border-bottom: 6px solid;
  border-bottom-color: #ffffff;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  position: relative;
  top: 10px;
  border: 1px solid #bcbcb6;
  background-color: #ffffff;
  padding-top: 8px;
  padding-bottom: 8px;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  max-height: 240px;
}

.c16:before {
  left: 50%;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: -6px;
  border-bottom: 6px solid;
  border-bottom-color: #bcbcb6;
}

.c16:after {
  left: 50%;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: -5px;
  border-bottom: 6px solid;
  border-bottom-color: #ffffff;
}

.c6 {
  overflow-y: auto;
  width: 100%;
  height: 100%;
  padding: 1px;
  margin: -1px;
}

.c3:after {
  content: '';
  position: absolute;
  pointer-events: none;
  bottom: calc(100% - 240px - 30px);
  left: 6px;
  height: 20px;
  background: linear-gradient(to bottom,rgba(255,255,255,0),#fff);
  width: calc(100% - 12px);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #4B4B46;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c7:hover {
  background: #F5F5F5;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #0046FF;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c10:hover {
  background: #F5F5F5;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #4B4B46;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
  color: #A0A09B;
  pointer-events: none;
}

.c14:hover {
  background: #F5F5F5;
}

.c9 {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Default (right)
    </div>
    <div>
      <div
        className="c3"
      >
        <ul
          className="c4 c5"
          role="listbox"
        >
          <div
            className="c6"
          >
            <span
              className="c7 c8"
            >
              <span
                className="c9"
              >
                Default?
              </span>
            </span>
            <span
              className="c10 c8"
            >
              <span
                className="c9"
              >
                First
              </span>
              <div
                className="c11"
              >
                <div
                  className="c12"
                >
                  <svg
                    aria-hidden="true"
                    className="c13"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    size={4}
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                    />
                  </svg>
                </div>
              </div>
            </span>
            <span
              className="c7 c8"
            >
              <span
                className="c9"
              >
                Second
              </span>
            </span>
            <span
              className="c14 c8"
            >
              <span
                className="c9"
              >
                Disabled
              </span>
            </span>
          </div>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Left
    </div>
    <div>
      <div
        className="c3"
      >
        <ul
          className="c15 c5"
          role="listbox"
        >
          <div
            className="c6"
          >
            <span
              className="c7 c8"
            >
              <span
                className="c9"
              >
                Default?
              </span>
            </span>
            <span
              className="c10 c8"
            >
              <span
                className="c9"
              >
                First
              </span>
              <div
                className="c11"
              >
                <div
                  className="c12"
                >
                  <svg
                    aria-hidden="true"
                    className="c13"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    size={4}
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                    />
                  </svg>
                </div>
              </div>
            </span>
            <span
              className="c7 c8"
            >
              <span
                className="c9"
              >
                Second
              </span>
            </span>
            <span
              className="c14 c8"
            >
              <span
                className="c9"
              >
                Disabled
              </span>
            </span>
          </div>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Center
    </div>
    <div>
      <div
        className="c3"
      >
        <ul
          className="c16 c5"
          role="listbox"
        >
          <div
            className="c6"
          >
            <span
              className="c7 c8"
            >
              <span
                className="c9"
              >
                Default?
              </span>
            </span>
            <span
              className="c10 c8"
            >
              <span
                className="c9"
              >
                First
              </span>
              <div
                className="c11"
              >
                <div
                  className="c12"
                >
                  <svg
                    aria-hidden="true"
                    className="c13"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    size={4}
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                    />
                  </svg>
                </div>
              </div>
            </span>
            <span
              className="c7 c8"
            >
              <span
                className="c9"
              >
                Second
              </span>
            </span>
            <span
              className="c14 c8"
            >
              <span
                className="c9"
              >
                Disabled
              </span>
            </span>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
